update main background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -280,25 +280,58 @@
 		opacity: 0.6;
 	}
 
-	/* Monad Logo Subtle Pattern */
+	/* Monad & Korean Nads Logo Pattern */
 	.monad-logo-pattern {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		opacity: 0.015;
-		background-image: url("data:image/svg+xml,%3Csvg width='200' height='200' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M100 30 Q130 50 140 80 Q150 110 130 130 Q110 150 80 140 Q50 130 40 100 Q30 70 50 50 Q70 30 100 30 M100 60 Q85 60 75 75 Q65 90 75 105 Q85 120 100 120 Q115 120 125 105 Q135 90 125 75 Q115 60 100 60 Z' fill='%236366f1' /%3E%3C/svg%3E");
-		background-repeat: repeat;
-		background-size: 250px 250px;
+		opacity: 0.12;
 		pointer-events: none;
-		animation: pattern-drift 60s linear infinite;
 	}
 
-	@keyframes pattern-drift {
+	.monad-logo-pattern::before {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-image: url("/monad.jfif");
+		background-repeat: repeat;
+		background-size: 120px 120px;
+		background-position: 0 0;
+		animation: pattern-drift-1 60s linear infinite;
+		mix-blend-mode: screen;
+		filter: brightness(0.8);
+	}
+
+	.monad-logo-pattern::after {
+		content: "";
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-image: url("/koreanads.jpg");
+		background-repeat: repeat;
+		background-size: 120px 120px;
+		background-position: 60px 60px;
+		animation: pattern-drift-2 60s linear infinite reverse;
+		mix-blend-mode: screen;
+		filter: brightness(0.8);
+	}
+
+	@keyframes pattern-drift-1 {
 		0% {
-			background-position: 0 0;
+			background-position: 0 0, 60px 60px;
 		}
 		100% {
-			background-position: 250px 250px;
+			background-position: 120px 120px, 180px 180px;
+		}
+	}
+
+	@keyframes pattern-drift-2 {
+		0% {
+			background-position: 60px 60px, 0 0;
+		}
+		100% {
+			background-position: 180px 180px, 120px 120px;
 		}
 	}
 
